force-app/main/default/objects/Increase_Rate__c/Increase_Rate__c.object-meta.xml
<CustomObject>
    <label>Increase Rate</label>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>Increase Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Increase Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>