force-app/main/default/objects/Increase_Rate__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase Category 1</fullName>
            </value>
            <value>
                <fullName>Increase Category 2</fullName>
            </value>
            <value>
                <fullName>Increase Category 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>