force-app/main/default/objects/Increase_Rate__c/fields/End_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Effective_Date__c</fullName>
    <label>End Effective Date</label>
    <type>Date</type>
</CustomField>