force-app/main/default/objects/Increase_Rate__c/fields/Increase_Type__c.field-meta.xml
<CustomField>
    <fullName>Increase_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Increase Type</label>
    <referenceTo>Increase_Type__c</referenceTo>
    <relationshipLabel>Increase Rates</relationshipLabel>
    <relationshipName>Increase_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>