force-app/main/default/objects/Increase_Rate__c/fields/Start_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Effective_Date__c</fullName>
    <label>Start Effective Date</label>
    <type>Date</type>
</CustomField>