force-app/main/default/objects/Increase_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Start_Effective_Date__c</columns>
    <columns>End_Effective_Date__c</columns>
    <columns>Increase_Type__c</columns>
    <columns>Increase_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>